--- a/Enamel/src/enamel/CreationSetupView.fxml
+++ b/Enamel/src/enamel/CreationSetupView.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
@@ -12,27 +13,47 @@
   <children>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
          <children>
-            <Label alignment="CENTER" layoutX="1.0" layoutY="41.0" prefHeight="42.0" prefWidth="400.0" text="WELCOME TO THE TEACHING SCENARIO BUILDER!">
+            <Label alignment="CENTER" layoutY="37.0" prefHeight="42.0" prefWidth="400.0" text="WELCOME TO THE TEACHING SCENARIO BUILDER!">
                <font>
-                  <Font name="Arial Black" size="13.0" />
+                  <Font name="System Bold Italic" size="15.0" />
                </font>
             </Label>
-            <ChoiceBox fx:id="nobBox" layoutX="223.0" layoutY="269.0" prefHeight="25.0" prefWidth="53.0" />
-            <Label alignment="CENTER_RIGHT" layoutX="43.0" layoutY="198.0" prefHeight="25.0" prefWidth="171.0" text="NUMBER OF BRAILLE CELLS" textAlignment="CENTER" />
-            <Label alignment="CENTER_RIGHT" layoutX="41.0" layoutY="269.0" prefHeight="25.0" prefWidth="171.0" text="NUMBER OF BUTTONS" />
-            <TextField fx:id="scenarioNameTextField" layoutX="126.0" layoutY="143.0" />
-            <Label layoutX="115.0" layoutY="107.0" text="Please enter the scenario name: " />
-            <Button layoutX="227.0" layoutY="333.0" mnemonicParsing="false" onAction="#continueButton" prefHeight="42.0" prefWidth="135.0" text="Continue">
-               <font>
-                  <Font name="Arial Black" size="12.0" />
-               </font>
-            </Button>
-            <Button layoutX="38.0" layoutY="333.0" mnemonicParsing="false" onAction="#mainMenuButton" prefHeight="42.0" prefWidth="135.0" text="Main Menu">
-               <font>
-                  <Font name="Arial Black" size="12.0" />
-               </font>
-            </Button>
-            <TextField fx:id="nocTextField" layoutX="223.0" layoutY="198.0" prefHeight="25.0" prefWidth="53.0" text="1" />
+            <VBox alignment="CENTER" layoutY="115.0" prefHeight="175.0" prefWidth="401.0" spacing="5.0">
+               <children>
+                  <Label text="Enter the scenario name: ">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                  </Label>
+                  <TextField fx:id="scenarioNameTextField" maxWidth="150.0" onKeyReleased="#userTyped" prefHeight="25.0" prefWidth="336.0" />
+                  <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="25.0" prefWidth="200.0" text="Number of Braille Cells:">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                  </Label>
+                  <ChoiceBox fx:id="nocBox" prefHeight="25.0" prefWidth="53.0" />
+                  <Label alignment="CENTER" prefHeight="25.0" prefWidth="200.0" text="Number of Interactive Buttons:">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                  </Label>
+                  <ChoiceBox fx:id="nobBox" prefHeight="25.0" prefWidth="53.0" />
+               </children>
+            </VBox>
+            <HBox alignment="TOP_CENTER" layoutY="339.0" prefHeight="65.0" prefWidth="400.0" spacing="75.0">
+               <children>
+                  <Button mnemonicParsing="false" onAction="#mainMenuButton" prefHeight="42.0" prefWidth="135.0" text="Main Menu">
+                     <font>
+                        <Font name="Arial Black" size="12.0" />
+                     </font>
+                  </Button>
+                  <Button fx:id="continueButton" mnemonicParsing="false" onAction="#continueButton" prefHeight="42.0" prefWidth="135.0" text="Continue">
+                     <font>
+                        <Font name="Arial Black" size="12.0" />
+                     </font>
+                  </Button>
+               </children>
+            </HBox>
          </children>
     </AnchorPane>
   </children>
