--- a/Enamel/src/enamel/MainMenuViewAA.fxml
+++ b/Enamel/src/enamel/MainMenuViewAA.fxml
@@ -27,7 +27,7 @@
             <font>
                <Font name="Arial Black" size="12.0" />
             </font></Button>
-         <Button layoutX="435.0" layoutY="465.0" prefHeight="50.0" prefWidth="151.0" text="Sample Scenarios">
+         <Button layoutX="435.0" layoutY="465.0" onAction="#sampleScenarioButton" prefHeight="50.0" prefWidth="151.0" text="Sample Scenarios">
             <font>
                <Font name="Arial Black" size="12.0" />
             </font></Button>
